Fixed the cell barcode 14mer and 15mer to be selectable.

--- a/Q2-pipeline_py3/configure.yaml
+++ b/Q2-pipeline_py3/configure.yaml
@@ -22,6 +22,8 @@ BCL_DIR: '/bcl_dir'
 SAMPLESHEET: 'SampleSheet.csv'
 REF_DIR: './reference/combined_mouse_Gencode_GRCm39_M27'
 SPECIES: 'mouse'
-BARCODE_FILE: '20160303_MDRT384primer.unix.txt'
+CB_LENGTH: '15'
+# Cell Barcode length 14mer or 15mer
+BARCODE_FILE: 'CB_15mer_384_SetA.txt'
 TRIMSEQUENCE: 'GTATAGAATTCGCGGCCGCTCGCGAT'
 
